Creadas las plantillas de menu y plantilla y adjuntado el rastro de miga

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@ header nav .menu .activa {
     color: var(--colorprincipal);
 }
 
+header nav .menu a:hover {
+    color: var(--colorprincipal);
+}
+
 header nav .hamburguesa {
     cursor: pointer;
     width: 1.875em;
