--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,75 @@ footer a:hover {
 
 /* Fin del footer */
 
+/* Inicio del hero */
+.hero {
+    background-image: url(../material_hamburgueseria/images/fondo.jpg);
+    height: 60vh;
+    background-size: cover;
+    background-position: center center;
+    background-blend-mode: multiply;
+    background-color: #888;
+    padding-top: 17vh;
+    color: white;
+}
+
+.hero h1 {
+    font-family: var(--fuentetitulos);
+    font-size: 2.25em;
+}
+
+.hero h2 {
+    color: var(--colorprincipal);
+    font-size: 1.25em;
+    margin: var(--margingrid) 0;
+}
+
+.hero p {
+    font-size: 1.15em;
+}
+
+.boton {
+    display: inline-block;
+    background-color: var(--colorprincipal);
+    padding: 1.15em;
+    color: white;
+    text-decoration: none;
+    border: 1px solid var(--colorprincipal);
+}
+
+.boton:hover {
+    background-color: transparent;
+    color: var(--colorprincipal);
+}
+
+.boton:hover i {
+    transition: transform 0.5s;
+    transform: translateX(5px);
+}
+
+.hero .container>div {
+    margin: var(--margingrid);
+}
+
+.hero .social {
+    display: flex;
+    width: 10em;
+    justify-content: space-between;
+
+}
+
+.hero .social a {
+    color: white;
+    font-size: 2em;
+
+}
+
+.hero .container {
+    padding: 0 var(--margingrid);
+}
+
+/* Fin del hero */
+
 /* Inicio Mediaquerys */
 @media(min-width: 48em) {
     header .nav-top span {
@@ -184,5 +253,9 @@ footer a:hover {
     header nav .menu a {
         padding: 0.5em 0 1.25em 1.25em;
         border-bottom: 0;
+    }
+
+    .hero .container {
+        padding: 0;
     }
 }
