--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ footer a:hover {
     font-size: 1.15em;
 }
 
-.boton {
+.hero .boton {
     display: inline-block;
     background-color: var(--colorprincipal);
     padding: 1.15em;
@@ -430,6 +430,93 @@ main #aboutus .imagen:hover :is(.marco, .marco img) {
 
 /* Final about us */
 
+/* Inicio del menu */
+#menu p {
+    color: white;
+    text-align: left;
+    padding-top: 10px;
+}
+
+#menu .container {
+    background-color: var(--colorsecundario);
+    padding: var(--margingrid);
+    color: white;
+}
+
+#menu .container h2 {
+    color: var(--colorprincipal);
+}
+
+#menu .container h2 span {
+    color: white;
+
+}
+
+#menu .offers ul {
+    display: block;
+    list-style: none;
+    width: 100%;
+    margin: 3.125em 0.3125em;
+
+}
+
+#menu .offers ul li {
+    margin: 0.625em;
+    color: white;
+
+
+}
+
+#menu .container .underline {
+
+    width: 6.25rem;
+    margin: -1.25em auto;
+}
+
+
+#menu .container .today hr {
+    display: inline-block;
+    text-align: left;
+    margin-top: -2.1875em;
+    margin-left: 1.5625em;
+}
+
+#menu figure {
+    margin: 0 auto;
+    width: 80%;
+}
+
+#menu .menu .titulo {
+    text-align: left;
+    margin-top: 100px;
+    margin-left: 50px;
+    padding-bottom: 20px;
+}
+
+#menu .menu .titulo span {
+    color: white;
+    text-align: left;
+}
+
+#menu .menu .titulo .boton {
+    text-align: left;
+}
+
+#menu .offers a {
+    color: white;
+    padding: 10px;
+}
+
+#menu .offers a:hover {
+    background-color: var(--colorprincipal);
+
+
+}
+
+
+
+/* Fin del menu */
+
 /* Inicio Mediaquerys */
 @media(min-width: 48em) {
     header .nav-top span {
@@ -516,6 +603,24 @@ main #aboutus .imagen:hover :is(.marco, .marco img) {
     section .articles article {
 
         width: 33.333%;
+    }
+
+    #menu .wrapper {
+        display: inline-block;
+
+    }
+
+    #menu .menu article {
+        display: inline;
+    }
+
+    #menu figure {
+
+        width: 30%;
+    }
+
+    #menu .container {
+        display: block;
     }
 
 
